# pedant

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  package-lock.json  package.json
src/: lib.rs  main.rs  v1.rs
src/app/: error.rs  kernel.rs  mod.rs  result.rs
src/app/use_case/: editor.rs
src/domain/: error.rs
src/infra/: error.rs
src/util/: error.rs  mod.rs  result.rs
src/util/ddd/: aggregate.rs  entity.rs  mod.rs  version.rs  vo.rs
src/util/di/: container.rs  lifetime.rs  mod.rs  tag.rs
